[gd_scene load_steps=14 format=2]

[ext_resource path="res://Chestie/Animations/shell/shell00.png" type="Texture" id=1]
[ext_resource path="res://Chestie/Animations/no-shell/chestnut00.png" type="Texture" id=2]
[ext_resource path="res://Chestie/Animations/no-shell/chestnut01.png" type="Texture" id=3]
[ext_resource path="res://Chestie/Animations/no-shell/chestnut02.png" type="Texture" id=4]
[ext_resource path="res://Chestie/Animations/no-shell/chestnut03.png" type="Texture" id=5]
[ext_resource path="res://Chestie/Chestie.gd" type="Script" id=6]
[ext_resource path="res://Chestie/Animations/shell/shell02.png" type="Texture" id=7]
[ext_resource path="res://Chestie/Animations/shell/shell01.png" type="Texture" id=8]
[ext_resource path="res://Chestie/Animations/shell/shell03.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "no-shell",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "shell",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.823, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.521, 6.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.5925, 10 )

[node name="Chestie" type="KinematicBody2D"]
scale = Vector2( 0.35, 0.35 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "no-shell"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, 8.5 )
shape = SubResource( 1 )

[node name="BounceArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
modulate = Color( 0, 1, 0.6, 1 )
position = Vector2( 0, -3.5 )
shape = SubResource( 2 )

[node name="KillArea" type="Area2D" parent="."]
position = Vector2( 0, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
modulate = Color( 0.87451, 0, 1, 1 )
position = Vector2( 0.5, 13 )
shape = SubResource( 3 )

[node name="WallTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="BounceArea" to="." method="_on_BounceArea_body_entered"]
[connection signal="body_entered" from="KillArea" to="." method="_on_KillArea_body_entered"]
